Change arg format of main